--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
