--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
   "dependencies": {
     "@babel/preset-env": "^7.16.7",
     "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
+    "passport-facebook": "^3.0.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
