--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "@babel/preset-env": "^7.16.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "cookie-parser": "^1.4.6",
-    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
@@ -23,9 +23,6 @@
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
-    "passport": "^0.5.2",
-    "passport-facebook": "^3.0.0",
-    "passport-local": "^1.0.0",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
