--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
